[gd_scene load_steps=11 format=3 uid="uid://diwo8r877y02c"]

[ext_resource type="Script" uid="uid://c1swk6oy25iny" path="res://ConfigInterface/ConfigInterface.gd" id="1_gkws8"]
[ext_resource type="PackedScene" uid="uid://bcresji1hnjiu" path="res://ConfigInterface/FretColorPicker.tscn" id="1_l4cb1"]
[ext_resource type="Texture2D" uid="uid://wmw6outrhpp5" path="res://ConfigInterface/blobnomcookie.png" id="1_yue4u"]
[ext_resource type="PackedScene" uid="uid://bcjdywc38khs8" path="res://ConfigInterface/StrumColorPicker.tscn" id="3_5dgwu"]
[ext_resource type="Script" uid="uid://ddkoeidsjlmeu" path="res://ConfigInterface/IPSToggle.gd" id="3_bmsq3"]
[ext_resource type="Script" uid="uid://ckp4b35kj1u38" path="res://ConfigInterface/BorderlessToggle.gd" id="4_j40uj"]
[ext_resource type="Script" uid="uid://dknf7icrvodmq" path="res://ConfigInterface/ScrollSpeedSpinBox.gd" id="4_thkfi"]
[ext_resource type="Script" uid="uid://bwoqxkhxjbnwa" path="res://ConfigInterface/HamburgerToggle.gd" id="5_fhkjl"]
[ext_resource type="Script" uid="uid://dbqb8oacyv82l" path="res://ConfigInterface/InputbarWidthSpinBox.gd" id="5_wy8my"]
[ext_resource type="Script" uid="uid://clioujm8iab1a" path="res://ConfigInterface/WindowScaleSlider.gd" id="6_au7in"]

[node name="ConfigInterface" type="Window"]
auto_translate_mode = 2
title = "ya_inputdisplay - Configuration"
initial_position = 2
size = Vector2i(520, 175)
transient = true
unresizable = true
auto_translate = false
script = ExtResource("1_gkws8")

[node name="MainBackground" type="ColorRect" parent="."]
offset_right = 520.0
offset_bottom = 100.0
color = Color(0, 0, 0, 1)

[node name="ColorPanel" type="Panel" parent="MainBackground"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 75.0

[node name="Frets" type="Control" parent="MainBackground/ColorPanel"]
anchors_preset = 0

[node name="0" parent="MainBackground/ColorPanel/Frets" instance=ExtResource("1_l4cb1")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 25.0
offset_right = 50.0
offset_bottom = 75.0
grow_horizontal = 1
grow_vertical = 1
tooltip_text = "The color of the lowest fret
Click to edit me :D"

[node name="1" parent="MainBackground/ColorPanel/Frets" instance=ExtResource("1_l4cb1")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 50.0
offset_top = 25.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 1
grow_vertical = 1
tooltip_text = "The color of the second-lowest fret
Click to edit me :D"

[node name="2" parent="MainBackground/ColorPanel/Frets" instance=ExtResource("1_l4cb1")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 100.0
offset_top = 25.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 1
grow_vertical = 1
tooltip_text = "The color of the middle fret
Click to edit me :D"

[node name="3" parent="MainBackground/ColorPanel/Frets" instance=ExtResource("1_l4cb1")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 150.0
offset_top = 25.0
offset_right = 200.0
offset_bottom = 75.0
grow_horizontal = 1
grow_vertical = 1
tooltip_text = "The color of the second-highest fret
Click to edit me :D"

[node name="4" parent="MainBackground/ColorPanel/Frets" instance=ExtResource("1_l4cb1")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 200.0
offset_top = 25.0
offset_right = 250.0
offset_bottom = 75.0
grow_horizontal = 1
grow_vertical = 1
tooltip_text = "The color of the highest fret
Click to edit me :D"

[node name="Strums" type="Control" parent="MainBackground/ColorPanel"]
anchors_preset = 0

[node name="strum_up" parent="MainBackground/ColorPanel/Strums" instance=ExtResource("3_5dgwu")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 125.0
offset_bottom = 25.0
grow_horizontal = 1
grow_vertical = 1

[node name="strum_down" parent="MainBackground/ColorPanel/Strums" instance=ExtResource("3_5dgwu")]
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 125.0
offset_top = 0.0
offset_right = 250.0
offset_bottom = 25.0
grow_horizontal = 1
grow_vertical = 1

[node name="MiscPanel" type="Panel" parent="MainBackground"]
layout_mode = 0
offset_left = 250.0
offset_right = 520.0
offset_bottom = 75.0

[node name="ScrollSpeed" type="Panel" parent="MainBackground/MiscPanel"]
layout_mode = 0
offset_right = 270.0
offset_bottom = 37.5

[node name="Label" type="Label" parent="MainBackground/MiscPanel/ScrollSpeed"]
layout_mode = 1
offset_left = 5.0
offset_right = 137.0
offset_bottom = 30.0
text = "Scroll Speed: "
vertical_alignment = 1

[node name="SpinBox" type="SpinBox" parent="MainBackground/MiscPanel/ScrollSpeed"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -134.0
offset_right = -49.0
offset_bottom = 32.0
grow_horizontal = 0
tooltip_text = "A value from 0.1-9999.9
The rate at which the Input Bars (The Colored stripes) move, default is 400."
min_value = 0.1
max_value = 9999.9
step = 0.1
value = 420.0
custom_arrow_step = 10.0
script = ExtResource("4_thkfi")

[node name="InputbarWidth" type="Panel" parent="MainBackground/MiscPanel"]
layout_mode = 1
offset_top = 37.5
offset_right = 270.0
offset_bottom = 75.0

[node name="Label" type="Label" parent="MainBackground/MiscPanel/InputbarWidth"]
layout_mode = 1
offset_left = 5.0
offset_right = 137.0
offset_bottom = 30.0
text = "Input Bar Width: "
vertical_alignment = 1

[node name="SpinBox" type="SpinBox" parent="MainBackground/MiscPanel/InputbarWidth"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -134.0
offset_right = -49.0
offset_bottom = 32.0
grow_horizontal = 0
tooltip_text = "A value from 1-999
The width of the Input Bars (The Colored stripes), default is 50."
min_value = 1.0
max_value = 320.0
value = 40.0
rounded = true
custom_arrow_step = 10.0
script = ExtResource("5_wy8my")

[node name="WindowScale" type="Panel" parent="MainBackground"]
layout_mode = 0
offset_top = 75.0
offset_right = 520.0
offset_bottom = 100.0

[node name="HSlider" type="HSlider" parent="MainBackground/WindowScale"]
modulate = Color(3, 3, 3, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -392.0
offset_right = -102.0
offset_bottom = 25.0
grow_horizontal = 0
min_value = 0.5
max_value = 4.0
step = 0.5
value = 1.0
tick_count = 8
script = ExtResource("6_au7in")

[node name="Label" type="Label" parent="MainBackground/WindowScale/HSlider"]
layout_mode = 1
offset_left = -123.0
offset_right = 9.0
offset_bottom = 25.0
text = "Window Scale:"

[node name="ValueLabel" type="Label" parent="MainBackground/WindowScale/HSlider"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 5.0
offset_right = 45.0
offset_bottom = 25.0
grow_horizontal = 0
text = "1x"

[node name="TogglesBackground" type="ColorRect" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 175.0
grow_horizontal = 2
color = Color(0.352941, 0.352941, 0.392157, 1)

[node name="HamburgerToggle" type="CheckButton" parent="TogglesBackground"]
layout_mode = 0
offset_left = 380.0
offset_right = 424.0
offset_bottom = 25.0
focus_mode = 0
button_pressed = true
script = ExtResource("5_fhkjl")

[node name="Label" type="Label" parent="TogglesBackground/HamburgerToggle"]
layout_mode = 0
offset_left = -250.0
offset_bottom = 25.0
tooltip_text = "If toggled off, the Hamburger Button will only be visible when the mouse pointer is hovering over it."
mouse_filter = 1
text = "Always show Hamburger Button"

[node name="IPSToggle" type="CheckButton" parent="TogglesBackground"]
layout_mode = 0
offset_left = 380.0
offset_top = 25.0
offset_right = 424.0
offset_bottom = 50.0
focus_mode = 0
button_pressed = true
script = ExtResource("3_bmsq3")

[node name="Label" type="Label" parent="TogglesBackground/IPSToggle"]
layout_mode = 0
offset_left = -250.0
offset_bottom = 25.0
tooltip_text = "Shows/Hides the IPS (Inputs Per Second)"
mouse_filter = 1
text = "Show IPS"

[node name="BorderlessToggle" type="CheckButton" parent="TogglesBackground"]
layout_mode = 0
offset_left = 380.0
offset_top = 50.0
offset_right = 424.0
offset_bottom = 75.0
focus_mode = 0
button_pressed = true
script = ExtResource("4_j40uj")

[node name="Label" type="Label" parent="TogglesBackground/BorderlessToggle"]
layout_mode = 0
offset_left = -250.0
offset_bottom = 25.0
tooltip_text = "Shows/Hides the IPS (Inputs Per Second)"
mouse_filter = 1
text = "Borderless Window"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 470.0
offset_top = 105.0
offset_right = 566.0
offset_bottom = 201.0
scale = Vector2(0.5, 0.5)
tooltip_text = "Blob nom cookie"
texture = ExtResource("1_yue4u")
